--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,10 +3,15 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <title>{{ page.title }}</title>
+<link rel="stylesheet" href="//jquery.com/jquery-wp-content/themes/jquery.com/style.css">
+<script src="https://code.jquery.com/jquery-1.11.3.js"></script>
+<script>
+	alert(0);
+</script>
 </head>
 <body>
-
+<div id="container">
 {{ content }}
-
+</div>
 </body>
 </html>
