--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,14 +4,21 @@
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <title>{{ page.title }}</title>
 <link rel="stylesheet" href="//jquery.com/jquery-wp-content/themes/jquery.com/style.css">
-<script src="https://code.jquery.com/jquery-1.11.3.js"></script>
-<script>
-	alert(0);
-</script>
+<style type="text/css">
+	header{background:#000;}
+</style>
 </head>
 <body>
-<div id="container">
+<header></header>
+<main>
 {{ content }}
-</div>
+</main>
+<footer></footer>
+<script src="https://code.jquery.com/jquery-1.11.3.js"></script>
+<script>
+	$(function(){
+		$(header).html("test");
+	});
+</script>
 </body>
 </html>
