--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,8 @@
 <title>{{ page.title }}</title>
 <link rel="stylesheet" href="//jquery.com/jquery-wp-content/themes/jquery.com/style.css">
 <style type="text/css">
-	header{background:#000;}
+	* {margin:0;padding:0;}
+	header {background:#000;}
 </style>
 </head>
 <body>
