--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -211,7 +211,7 @@
 		</div>
 		<div id="navigator">
 			<ul id="navList">
-				<li><a class="menu" href="/">首页</a></li>
+				<li><a class="menu" href="/pages">首页</a></li>
 				<li><a class="menu" href="/">文章</a></li>
 			</ul>
 		<div class="blogStats">
