--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -165,6 +165,81 @@
 		font-weight: normal;
 		text-decoration: none;
 	}
+	#sideBarMain {
+		position: relative;
+		width: 205px;
+		height: auto;
+		margin: 0;
+		border: none;
+		padding: 0;
+		background: none;
+	}
+	.newsItem {
+		position: relative;
+		width: 185px;
+		height: auto;
+		margin: 0 0 15px 0;
+		border: none;
+		padding: 10px;
+		color: #6a6352;
+		font-family: Arial,Helvetica,sans-serif;
+		font-size: 12px;
+		font-weight: normal;
+		text-decoration: none;
+	}
+	.newsItem .catListTitle{
+		position: relative;
+		top: -10px;
+		left: -10px;
+		width: 195px;
+		height: 19px;
+		margin: 0;
+		border-bottom: #d6dddc 1px solid;
+		padding: 5px 0 0 10px;
+		background-color: Transparent;
+		color: #55626e;
+		font-family: Arial,Helvetica,sans-serif;
+		font-size: 14px;
+		font-weight: bold;
+		text-decoration: none;
+	}
+	#leftcontentcontainer {
+		position: relative;
+		width: 205px;
+		height: auto;
+		margin: 0;
+		border: none;
+		padding: 0;
+		background: none;
+	}
+	.catListTitle {
+		position: relative;
+		width: 195px;
+		height: 19px;
+		margin: 0;
+		border-bottom: #d6dddc 1px solid;
+		padding: 5px 0 0 10px;
+		background-color: Transparent;
+		color: #55626e;
+		font-family: Arial,Helvetica,sans-serif;
+		font-size: 14px;
+		font-weight: bold;
+		text-decoration: none;
+	}
+	#sideBarMain ul {
+		position: relative;
+		width: 185px;
+		height: auto;
+		margin: 0;
+		border: none;
+		padding: 10px;
+		color: #6a6352;
+		font-family: Arial,Helvetica,sans-serif;
+		font-size: 12px;
+		font-weight: normal;
+		text-decoration: none;
+		line-height: 20px;
+	}
 	#main {
 		position: relative;
 		top: 0;
@@ -231,6 +306,45 @@
 			</div>
 		</div>
 		<div id="sideBar">
+			<div id="sideBarMain">
+				<div class="newsItem">
+				<h3 class="catListTitle">公告</h3>
+					<div id="blog-news">
+						<div id="profile_block">
+							昵称：大象<br>
+							园龄：<br>
+							粉丝：<br>
+							关注：
+						</div>
+					</div>
+				</div>
+				<div id="leftcontentcontainer">
+					<div id="blog-sidecolumn">
+						<div id="sidebar_shortcut" class="sidebar-block">
+						<div class="catListLink">
+							<h3 class="catListTitle">常用链接</h3>
+							<ul>
+								<li><a href="#" title="我的博客的随笔列表">我的随笔</a></li>
+								<li><a href="#" title="我发表过的评论列表">我的评论</a></li>
+								<li><a href="#" title="我评论过的随笔列表">我的参与</a></li>
+								<li><a href="#" title="我的博客的评论列表">最新评论</a></li>
+								<li><a href="#" title="我的博客的标签列表">我的标签</a></li>
+							</ul>
+						</div>
+						</div>
+						<div id="sidebar_postcategory" class="catListPostCategory sidebar-block">
+							<h3 class="catListTitle">随笔分类</h3>
+							<ul>
+								<li><a id="CatList_LinkList_0_Link_0" href="#">C#</a> </li>
+								<li><a id="CatList_LinkList_0_Link_1" href="#">Java</a> </li>
+								<li><a id="CatList_LinkList_0_Link_2" href="#">PHP</a> </li>
+								<li><a id="CatList_LinkList_0_Link_3" href="#">HTML/CSS/JS</a> </li>
+								<li><a id="CatList_LinkList_0_Link_4" href="#">DB</a> </li>
+							</ul>
+						</div>						
+					</div>
+				</div>		
+			</div>
 		</div>
 		<div class="clear"></div>
 	</div>
@@ -240,7 +354,7 @@
 <script src="https://code.jquery.com/jquery-1.11.3.js"></script>
 <script>
 	$(function(){
-		//$(header).html("test");
+		
 	});
 </script>
 </body>
