--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -349,6 +349,7 @@
 		<div class="clear"></div>
 	</div>
 	<div id="footer">
+	Copyright &copy;2017 周建辉
 	</div>
 </div>
 <script src="https://code.jquery.com/jquery-1.11.3.js"></script>
