--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -282,7 +282,7 @@
 	<div id="header">
 		<div id="blogTitle">
 			<h1>周建辉</h1>
-			<h2>记忆.记录.</h2>
+			<h2>与其在别处仰望 不如在这里并肩</h2>
 		</div>
 		<div id="navigator">
 			<ul id="navList">
