--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -275,6 +275,18 @@
 		text-decoration: none;
 		text-align: center
 	}
+	#topics p{
+		color: #6a6352;
+		font-family: 微软雅黑,华文细黑,黑体,Arial;
+		font-size: 18px;
+		font-weight: bold;
+	}
+	#topics a{
+		color: #6a6352;
+		font-family: 微软雅黑,华文细黑,黑体,Arial;
+		font-size: 18px;
+		font-weight: normal;
+	}
 </style>
 </head>
 <body>
