--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -275,13 +275,13 @@
 		text-decoration: none;
 		text-align: center
 	}
-	#topics p{
+	.topicList{
 		color: #6a6352;
 		font-family: 微软雅黑,华文细黑,黑体,Arial;
 		font-size: 18px;
 		font-weight: bold;
 	}
-	#topics a{
+	#topicTitle{
 		color: #6a6352;
 		font-family: 微软雅黑,华文细黑,黑体,Arial;
 		font-size: 18px;
