--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -320,13 +320,12 @@
 		<div id="sideBar">
 			<div id="sideBarMain">
 				<div class="newsItem">
-				<h3 class="catListTitle">公告</h3>
+				<h3 class="catListTitle">关于我</h3>
 					<div id="blog-news">
 						<div id="profile_block">
-							昵称：大象<br>
-							园龄：<br>
-							粉丝：<br>
-							关注：
+							现居烟台<br>
+							目标是成为一名优秀的开发者<br>
+							<a href="//github.com/jianhuizhou">我的GitHub</a><br>
 						</div>
 					</div>
 				</div>
