--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -281,10 +281,10 @@
 		font-size: 18px;
 		font-weight: bold;
 	}
-	#topicTitle{
+	.topicTitle{
 		color: #6a6352;
 		font-family: 微软雅黑,华文细黑,黑体,Arial;
-		font-size: 18px;
+		font-size: 14px;
 		font-weight: normal;
 	}
 </style>
@@ -323,9 +323,9 @@
 				<h3 class="catListTitle">关于我</h3>
 					<div id="blog-news">
 						<div id="profile_block">
+							周建辉<br>
 							现居烟台<br>
-							目标是成为一名优秀的开发者<br>
-							<a href="//github.com/jianhuizhou">我的GitHub</a><br>
+							目标是成为一名优秀的开发者
 						</div>
 					</div>
 				</div>
@@ -335,11 +335,8 @@
 						<div class="catListLink">
 							<h3 class="catListTitle">常用链接</h3>
 							<ul>
-								<li><a href="#" title="我的博客的随笔列表">我的随笔</a></li>
-								<li><a href="#" title="我发表过的评论列表">我的评论</a></li>
-								<li><a href="#" title="我评论过的随笔列表">我的参与</a></li>
-								<li><a href="#" title="我的博客的评论列表">最新评论</a></li>
-								<li><a href="#" title="我的博客的标签列表">我的标签</a></li>
+								<li><a href="//github.com/jianhuizhou">我的GitHub</a></li>
+								<li><a href="#">我的评论</a></li>
 							</ul>
 						</div>
 						</div>
